clean up NAME line for VMB manual

--- a/fb/fb-orle.1
+++ b/fb/fb-orle.1
@@ -1,8 +1,8 @@
 .TH FB-RLE 1V VMB
-'\"	last edit:	85/04/22	G. S. Moss
-'\"	SCCS ID:	@(#)fb-rle.1	1.3
+'\"	last edit:	85/05/21	G. S. Moss
+'\"	SCCS ID:	@(#)fb-rle.1	1.4
 .SH NAME
-fb-rle \- Save a frame buffer image in Run-Length Encoded form
+fb-rle \- save a frame buffer image in run-length encoded form
 .SH SYNOPSIS
 .B fb-rle
 [
