Changed example to use /dev/ik1h rather than 0h.

--- a/fb/fb-orle.1
+++ b/fb/fb-orle.1
@@ -1,6 +1,6 @@
 .TH FB-RLE 1V VMB
-'\"	last edit:	85/05/29	G. S. Moss
-'\"	SCCS ID:	@(#)fb-rle.1	1.5
+'\"	last edit:	85/10/01	G. S. Moss
+'\"	SCCS ID:	@(#)fb-rle.1	1.6
 .SH NAME
 fb-rle \- save a frame buffer image in run-length encoded form
 .SH SYNOPSIS
@@ -115,7 +115,7 @@ in
 Output file.
 .SH EXAMPLE
 .RS
-$ \fIFB_FILE=/dev/ik1l \|export \|FB_FILE\fR
+$ \fIFB_FILE=/dev/ik1h \|export \|FB_FILE\fR
 .br
 $ \fIfb-rle \|\-h \|tank.rle\fR
 .RE
