--- a/fb/fbcmap.1
+++ b/fb/fbcmap.1
@@ -1,6 +1,6 @@
 .TH FBCMAP 1V VMB
-'\"	last edit:	85/04/22	G. S. Moss
-'\"	SCCS ID:	@(#)fbcmap.1	1.2
+'\"	last edit:	86/07/26	D A Gwyn
+'\"	SCCS ID:	@(#)fbcmap.1	1.3
 .SH NAME
 fbcmap \- change the color map of a frame buffer
 .SH SYNOPSIS
@@ -9,7 +9,7 @@ fbcmap \- change the color map of a frame buffer
 .B \-h
 ] [ map_number ]
 .SH DESCRIPTION
-.B Fbcmap
+.I Fbcmap
 is used to change the color map of a frame buffer.
 By default, the device
 .B /dev/ik0l
@@ -20,7 +20,7 @@ variable
 .SM FB_FILE
 to the name of another device or file name
 and exporting it before execution of 
-.IR fbclear\^ .
+.IR fbclear .
 If the
 .B \-h
 option is used, the
@@ -31,17 +31,25 @@ option is used, the
 .B LORES
 (512x512x24) device is assumed.
 If an optional color
-.I map_number\^
-is given, that map is used; the default
-is the standard linear map.
-There are currently 4 other maps supplied
-numbered 1 through 4 in the following order:
-a reverse-linear map, one corrected for Poloroid 809/891 film, a linear
-mapping in which the first 100 values are black, and a linear map with
-values 1-192 incremented by 64 to boost dim pictures.
+.I map_number
+is given, that map is used;
+the default is the standard linear map.
+There are currently five other maps supplied
+numbered 1 through 5 in the following order:
+a reverse-linear (negative) map,
+one corrected for Poloroid 809/891 film,
+a linear mapping in which the first 100 values are black,
+a linear map with values 1-192 incremented by 64 to boost dim pictures,
+and the color map used by the University of Utah Alpha_1 project.
+There are also three special maps used to quickly change the display
+to a solid color for adjusting a camera without losing image memory,
+numbered 10 through 12 for
+black,
+white,
+and 18% neutral grey, respectively.
 .SH FILE
 /vld/lib/libfb.a
 .SH AUTHORS
-Gary S. Moss, BRL-VLD
+Gary S. Moss, BRL/VLD-VMB
 .br
-Michael John Muuss, BRL-SECAD
+Michael John Muuss, BRL/SECAD
