fixed spelling of Polaroid

--- a/fb/fbcmap.1
+++ b/fb/fbcmap.1
@@ -1,6 +1,6 @@
 .TH FBCMAP 1V VMB
-'\"	last edit:	86/07/26	D A Gwyn
-'\"	SCCS ID:	@(#)fbcmap.1	1.3
+'\"	last edit:	86/07/28	D A Gwyn
+'\"	SCCS ID:	@(#)fbcmap.1	1.4
 .SH NAME
 fbcmap \- change the color map of a frame buffer
 .SH SYNOPSIS
@@ -37,7 +37,7 @@ the default is the standard linear map.
 There are currently five other maps supplied
 numbered 1 through 5 in the following order:
 a reverse-linear (negative) map,
-one corrected for Poloroid 809/891 film,
+one corrected for Polaroid 809/891 film,
 a linear mapping in which the first 100 values are black,
 a linear map with values 1-192 incremented by 64 to boost dim pictures,
 and the color map used by the University of Utah Alpha_1 project.
