--- a/fb/pp-fb.1
+++ b/fb/pp-fb.1
@@ -1,40 +1,41 @@
 .TH PP-FB 1V VMB
-'\"	last edit:	85/03/28	G. S. Moss
-'\"	SCCS ID:	@(#)pp-fb.1	1.1
+'\"	last edit:	85/04/22	G. S. Moss
+'\"	SCCS ID:	@(#)pp-fb.1	1.2
 .SH NAME
-pp-fb \- display a
-.IR gift (1V)
-pretty-picture
-.SM
-.B (PP)
-file on a framebuffer
+pp-fb \- display a GIFT pretty-picture file on a frame buffer
 .SH SYNOPSIS
 .B pp-fb
 file.pp
 .SH DESCRIPTION
-.B Pp-fb
+.I Pp-fb
 reads
 .IR file.pp\^ ,
-determines the size and displays a color shaded image represented therein
-on a framebuffer.  The
+determines the size,
+and displays a color shaded image represented therein
+on a frame buffer.
+The
 .SM
 .B PP
 files are the output from using the pretty-picture option of the
-.IR gift (1V)
+.IR gift\^ (1V)
 ray-tracing program.
 Some information pertaining to the color assignment of region identification
 numbers and the background color is prompted for on the standard input.
-By default, the device ``/dev/ik0l'',
-is assumed.  This may be changed by setting the environment
+By default, the frame buffer device
+.B /dev/ik0l
+is assumed.
+This may be changed by setting the environment
 variable
 .B
 .SM FB_FILE
-to the name of another device or file name,
+to the name of another device or file name
 and exporting it before execution of 
-.IR pp-fb\^
+.IR pp-fb\^ .
 Commands for manipulating the display are documented on-line.
 .SH FILE
 /vld/lib/libfb.a
+.SH "SEE ALSO"
+gift(1V).
 .SH AUTHORS
 .PP 
 Gary Kuehl, BRL-VLD/ATB
@@ -42,6 +43,3 @@ Gary Kuehl, BRL-VLD/ATB
 Michael John Muuss, BRL-SECAD
 .br
 Gary S. Moss, BRL-VLD/VMB
-.SH "SEE ALSO"
-gift(1V)
-
