*** empty log message ***

--- a/vdeck/vdeck.1
+++ b/vdeck/vdeck.1
@@ -1,11 +1,11 @@
 .TH VDECK 1V VMB
-'\"	last edit:	85/01/31	D A Gwyn
-'\"	SCCS ID:	@(#)vdeck.1	2.2
+'\"	last edit:	85/03/05	D A Gwyn
+'\"	SCCS ID:	@(#)vdeck.1	2.3
 .SH NAME
 vdeck \- generate COM-GEOM decks from a GED file
 .SH SYNOPSIS
 .B vdeck
-file.vg
+.RB file .vg
 .SH DESCRIPTION
 A list of
 objects
